--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*=========
 fonts
 ===========*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400;1,700&display=swap');
 
 body {	
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;    
 	background: #fff;
@@ -80,12 +80,30 @@ img {
 /*===================
 header-area start
 =====================*/
+.header-area {
+    padding: 5px 0;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    display: block;
+    z-index: 9999999;
+    background-color: #fff;
+    transition: 0.3s all ease;
+}
+
+.headerfixed {
+    box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
+}
+
 .navbar-brand img {
-    max-width: 100px;
+    max-width: 150px;
+    transition: 0.3s all ease;
 }
 
 .navbar-nav li {
-    padding: 10px 15px;
+    padding: 10px 16px;
 }
 
 .navbar-nav li a {
@@ -96,8 +114,12 @@ header-area start
 }
 
 .navbar-nav li a:hover,
-.navbar-nav li #active {
-    color: #F36977;
+.header-area ul li .active {
+    color: #218A42;
+}
+
+.header-area ul li a:focus {
+    color: #000;
 }
 
 .nav-btn li {
@@ -106,15 +128,14 @@ header-area start
 
 .nav-btn li a {
     background: transparent;
-    border: 1px solid #F36977;
+    border: 2px solid #218A42;
     display: inline-block;
     padding: 8px 20px;
     border-radius: 7px;
 }
 
-.nav-btn li a:hover,
-.nav-btn li .active {
-    background: #F36977;
+.nav-btn li a:hover {
+    background:#218A42;
     color: #FFF;
 }
 
@@ -171,10 +192,11 @@ header-area start
 /*side-bar*/
 .offcanvas-start {
     width: 320px;
+    z-index: 999999999;
 }
 
 .offcanvas-header img {
-    max-width: 70px;
+    max-width: 120px;
 }
 
 .offcanvas-body ul li {
@@ -196,3 +218,170 @@ header-area start
 .modal-backdrop {
     background-color: transparent;
 }
+
+/*====================
+hero-section start
+======================*/
+.hero-section {
+    overflow: hidden;
+}
+
+.hero-left h2 {
+    font-size: 46px;
+    font-weight: 700;
+    color: #FFCB00;
+    text-transform: uppercase;
+}
+
+.hero-left h2 span {
+    color: #FFF;
+}
+
+.hero-left p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #FFF;
+    margin: 25px 0 40px;
+}
+
+.hero-left a {
+    font-size: 18px;
+    font-weight: 700;
+    color: #000;
+    background: #FFCB00;
+    text-transform: uppercase;
+    display: inline-block;
+    border: 1px solid #FFCB00;
+    padding: 10px 25px;
+    border-radius: 6px;
+}
+
+.hero-left a i {
+    display: inline-block;
+    margin-left: 6px;
+}
+
+.hero-left a:hover {
+    background: transparent;
+    color: #FFF;
+    border-color: #FFF;
+}
+
+.hero-right img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+.carousel-item {
+    padding: 105px 0;
+}
+
+.slider1 {
+    background: #001722;
+}
+
+.slider2 {
+    background: #E3EDFE;
+}
+
+.slider2 img {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.slider3 {
+    background: linear-gradient(to right, #32BACF, #1F3259);
+}
+
+.slider2 h2 {
+    color: #3B58B0;
+}
+
+.slider2 h2 span {
+    color: #29429D;
+}
+
+.slider2 p {
+    color: #243FA1;
+}
+
+.slider2 a {
+    background: #243FA1;
+    color: #FFF;
+    border-color: #243FA1;
+}
+
+.slider2 a:hover {
+    border-color: #243FA1;
+    color: #243FA1;
+}
+
+.slider3 h2 {
+    color: #1B1535;
+}
+
+.slider3 p {
+    color: #1B1535;
+}
+
+.slider3 a {
+    background: #1B1535;;
+    color: #FFF;
+    border-color: #1B1535;;
+}
+
+.slider3 a:hover {
+    border-color: #1B1535;;
+    color: #1B1535;;
+}
+
+.carousel-indicators [data-bs-target] {
+    background-color: #A5CD37;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+
+/*===================
+course-area start
+=====================*/
+.course-area {
+    padding: 70px 0;
+}
+
+.upper-content {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.upper-content h2 {
+    font-size: 36px;
+    font-weight: 700;
+    color: #191919;
+    text-transform: uppercase;
+}
+
+.upper-content h2::after {
+    content: "";
+    display: block;
+    width: 100px;
+    height: 2px;
+    background: #218A42;
+    margin: 10px auto;
+}
+
+.upper-content p {
+    font-size: 18px;
+    font-weight: 400;
+    color: #191919;
+}
+
+
+
+
+
+
+
+
+
+
+
