--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ header-area start
     color: #218A42;
 }
 
-.header-area ul li a:focus {
+.nav-link:focus {
     color: #000;
 }
 
@@ -201,6 +201,10 @@ header-area start
 
 .offcanvas-body ul li {
     padding: 10px 10px;
+}
+
+.offcanvas-body ul li .nav-link {
+    padding: 0;
 }
 
 .btn-close {
@@ -385,3 +389,169 @@ course-area start
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+/*=========================
+registration page start
+===========================*/
+.main-wraper2 {
+    background: #001722;
+    padding: 80px 0;
+}
+
+.register-form h2 {
+    font-size: 40px;
+    font-weight: 600;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.register-form h2::after {
+    content: "";
+    display: block;
+    width: 140px;
+    height: 2px;
+    background: #FFF;
+    margin: 12px auto;
+}
+
+.upload-btn-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+}
+
+.filebtn {
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 20px;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.filebtn img {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+}
+
+.upload-btn {
+    margin-bottom: 20px;
+}
+
+.register-form form {
+    max-width: 800px;
+    margin: 50px auto 0;
+}
+
+.form-info input,
+.form-info select,
+.form-info textarea {
+    width: 100%;
+    display: block;
+    font-size: 18px;
+    font-weight: 500;
+    color: #191919;
+    background: #FFF;
+    padding: 12px 20px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+::placeholder {
+    color: #191919;
+    opacity: 1;
+}
+
+.form-info select {
+    -webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+    background-image: url(images/down.png);
+    background-repeat: no-repeat;
+    background-position: 98% 50%;
+    background-size: 22px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.form-info p {
+    font-size: 18px;
+    font-weight: 500;
+    color: #191919;
+    margin-bottom: 0;
+    margin-right: 40px;
+}
+
+.radio-button-opt {
+    display: flex;
+    align-items: center;
+    background: #FFF;
+    padding: 12px 20px;
+    border-radius: 6px;
+    margin-bottom: 16px;
+}
+
+.radio-button {
+    display: flex;
+}
+
+.radio-button input,
+.radio-button label {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 5px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #191919;
+}
+
+.radio2 {
+    margin-left: 50px;
+}
+.form-info button {
+    width: 200px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #191919;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
+    margin: 32px auto 0;
+    background: #FFF;
+    border: 2px solid #FFF;
+    outline: none;
+    padding: 12px 15px;
+    border-radius: 8px;
+    transition: 0.2s all ease;
+}
+
+.form-info button:hover {
+    opacity: 0.8;
+    background: transparent;
+    color: #FFF;
+}
