--- a/style.css
+++ b/style.css
@@ -348,8 +348,12 @@ hero-section start
 /*===================
 course-area start
 =====================*/
-.course-area {
-    padding: 70px 0;
+.course-area,
+.about-area,
+.gallery-area,
+.contact-area {
+    padding-top: 170px;
+    margin-top: -80px;
 }
 
 .upper-content {
@@ -378,6 +382,132 @@ course-area start
     font-weight: 400;
     color: #191919;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*===================
+gallery-area start
+=====================*/
+.gallery-item img {
+    width: 100%;
+}
+
+.gallery-item {
+    margin: 14px 0;
+}
+
+
+
+
+
+
+
+
+
+/*===================
+contact-area start
+=====================*/
+.contact-main {
+    padding-top: 40px;
+}
+
+.contact-left iframe {
+    width: 100%;
+    height: 250px;
+}
+
+.contact-left ul {
+    padding-top: 20px;
+}
+
+.contact-left ul li {
+    padding: 5px 0;
+}
+
+.contact-left ul li,
+.contact-left ul li a {
+    font-size: 18px;
+    font-weight: 400;
+    color: #191919;
+    transition: 0.2s all ease;
+}
+
+.contact-left ul li i {
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
+    background: #218A42;
+    color: #FFF;
+    font-size: 18px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.contact-left ul li a:hover {
+    color: #218A42;
+}
+
+.contact-right input,
+.contact-right textarea {
+    width: 100%;
+    display: block;
+    font-size: 18px;
+    font-weight: 400;
+    color: #000;
+    background: #F1F1F1;
+    border: 1px solid #d1d1d1;
+    padding: 12px 16px;
+    border-radius: 6px;
+    margin-bottom: 15px;
+    outline: none;
+    resize: none;
+}
+
+.contact-right button {
+    width: 200px;
+    display: block;
+    font-size: 17px;
+    font-weight: 500;
+    color: #FFF;
+    background: #218A42;
+    text-transform: uppercase;
+    border: none;
+    outline: none;
+    padding: 14px 15px;
+    border: 1px solid #218A42;;
+    border-radius: 7px;
+    margin-top: 30px;
+    transition: 0.2s all ease;
+}
+
+.contact-right button:hover {
+    background: transparent;
+    color: #218A42;
+}
+
+/*===================
+footer-area start
+=====================*/
+.footer-area {
+    
+}
+
+
+
 
 
 
@@ -482,7 +612,9 @@ registration page start
     resize: none;
 }
 
-::placeholder {
+.form-info input::placeholder, 
+.form-info select::placeholder, 
+.form-info textarea::placeholder {
     color: #191919;
     opacity: 1;
 }
