--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,12 +5,32 @@ Medium Screen - Others
 */
 @media screen and (min-width: 992px) and (max-width: 1200px) {
 
+	.navbar-nav li a {
+		font-size: 16px;
+	}
+
 	.hero-left h2 {
 		font-size: 36px;
 	}
 
 	.hero-left p {
 		font-size: 17px;
+	}
+
+	.footer-item .footer-logo {
+		max-width: 140px;
+	}
+
+	.about-item h4 {
+		font-size: 21px;
+	}
+
+	.about-item img {
+		max-width: 40px;
+	}
+
+	.about-item p {
+		font-size: 15px;
 	}
 
 	
@@ -60,6 +80,23 @@ Small Screen - Tablate
 	.contact-left {
 		margin-top: 45px;
 	}
+
+	.footer-item {
+		margin: 20px 0;
+	}
+
+	.footer-area {
+		padding-top: 45px;
+	}
+	
+	.about-left {
+		margin-top: 30px;
+	}
+
+	.about-main {
+		padding: 30px 0 0;
+	}
+
 
 
 
@@ -182,7 +219,19 @@ Small Screen - Mobile
 		padding-top: 30px;
 	}
 
-	.course-area,
+	.contact-area {
+		padding-bottom: 70px;
+	}
+
+	.footer-item {
+		margin: 20px 0;
+	}
+
+	.footer-area {
+		padding-top: 40px;
+	}
+
+	.course-area, 
 	.about-area, 
 	.gallery-area, 
 	.contact-area {
@@ -190,10 +239,20 @@ Small Screen - Mobile
 		margin-top: -40px;
 	}
 
+	.about-left {
+		margin-top: 30px;
+	}
 
+	.about-main {
+		padding: 25px 0 0;
+	}
 
-
-
+	.about-item {
+		max-width: 350px;
+		margin: 15px auto;
+		text-align: center;
+	}
+	
 
 
 
