--- a/style.css
+++ b/style.css
@@ -37,17 +37,17 @@ img {
 
 ::selection {
     color: white; 
-    background: #ff7675;
+    background: #218A42;
 }
 
 ::-webkit-selection {
     color: white; 
-    background: #ff7675;
+    background: #218A42;
 }
 
 ::-moz-selection {
     color: white; 
-    background: #ff7675;
+    background: #218A42;
 }
 
 /*scrollto-top*/
@@ -55,7 +55,7 @@ img {
     width: 40px;
     height: 40px;
     border-radius: 20px 20px 0 0;
-    background: rgba(0,0,0,.5);   
+    background: rgb(33, 138, 66, 0.8);   
     text-align: center;
     padding-top: 8px;
     font-size: 22px;
@@ -70,11 +70,11 @@ img {
 }
 
 .scrollto-top:hover {   
-    background: #000;
+    background: #218A42;
     color: #fff;
-    box-shadow: 0px 0px 5px rgba(0,0,0,.5);
-    -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
-    -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.5);
+    box-shadow: 0px 0px 10px rgb(33, 138, 66, 0.8);
+    -webkit-box-shadow: 0px 0px 10px rgb(33, 138, 66, 0.8);
+    -moz-box-shadow: 0px 0px 10px rgb(33, 138, 66, 0.8);
 }
 
 /*===================
@@ -86,15 +86,15 @@ header-area start
     top: 0;
     width: 100%;
     display: block;
-    z-index: 9999999;
+    z-index: 99;
     background-color: #fff;
     transition: 0.3s all ease;
 }
 
 .headerfixed {
-    box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.25);
 }
 
 .navbar-brand img {
@@ -108,9 +108,25 @@ header-area start
 
 .navbar-nav li a {
     font-size: 18px;
-    font-weight: 400;
-    color: #000;
+    font-weight: 500;
+    color: #191919;
     transition: 0.2s all ease;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.navbar-nav li a::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: #218A42;
+    display: block;
+    transition: 0.4s;
+}
+
+.navbar-nav li a:hover::after,
+.navbar-nav li .active::after {
+    width: 100%;
 }
 
 .navbar-nav li a:hover,
@@ -118,8 +134,9 @@ header-area start
     color: #218A42;
 }
 
-.nav-link:focus {
-    color: #000;
+.navbar-nav li .nav-link {
+    color: #191919;
+    padding: 0!important;
 }
 
 .nav-btn li {
@@ -130,8 +147,12 @@ header-area start
     background: transparent;
     border: 2px solid #218A42;
     display: inline-block;
-    padding: 8px 20px;
+    padding: 10px 24px;
     border-radius: 7px;
+}
+
+.nav-btn li a::after {
+    display: none;
 }
 
 .nav-btn li a:hover {
@@ -205,6 +226,7 @@ header-area start
 
 .offcanvas-body ul li .nav-link {
     padding: 0;
+    display: inline-block;
 }
 
 .btn-close {
@@ -256,8 +278,8 @@ hero-section start
     text-transform: uppercase;
     display: inline-block;
     border: 1px solid #FFCB00;
-    padding: 10px 25px;
-    border-radius: 6px;
+    padding: 12px 60px;
+    border-radius: 8px;
 }
 
 .hero-left a i {
@@ -267,8 +289,8 @@ hero-section start
 
 .hero-left a:hover {
     background: transparent;
-    color: #FFF;
-    border-color: #FFF;
+    color: #FFCB00;
+    border-color: #FFCB00;
 }
 
 .hero-right img {
@@ -286,10 +308,6 @@ hero-section start
 
 .slider2 {
     background: #E3EDFE;
-}
-
-.slider2 img {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .slider3 {
@@ -383,6 +401,30 @@ course-area start
     color: #191919;
 }
 
+.course-item {
+    margin: 16px 0;
+}
+
+.course-item img {
+    width: 100%;
+}
+
+.course-cnt h4 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #191919;
+    text-transform: uppercase;
+}
+
+.course-cnt p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #191919;
+}
+
+.course-cnt {
+    margin-top: 15px;
+}
 
 
 
@@ -396,6 +438,40 @@ course-area start
 
 
 
+
+
+
+/*===================
+about-area start
+=====================*/
+.about-main {
+    padding: 40px 0 20px;
+}
+.about-right img {
+    width: 100%;
+}
+
+.about-item img {
+    max-width: 50px;
+}
+
+.about-item h4 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #191919;
+    margin: 8px 0;
+}
+
+.about-item p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #191919;
+    margin: 0;
+}
+
+.about-item {
+    margin: 15px 0;
+}
 
 /*===================
 gallery-area start
@@ -408,17 +484,13 @@ gallery-area start
     margin: 14px 0;
 }
 
-
-
-
-
-
-
-
-
 /*===================
 contact-area start
 =====================*/
+.contact-area {
+    padding-bottom: 80px;
+}
+
 .contact-main {
     padding-top: 40px;
 }
@@ -434,6 +506,15 @@ contact-area start
 
 .contact-left ul li {
     padding: 5px 0;
+}
+
+.contact-left ul .addres {
+    display: flex;
+    align-items: flex-start;
+}
+
+.contact-left ul .addres i {
+    margin-right: 14px;
 }
 
 .contact-left ul li,
@@ -503,8 +584,108 @@ contact-area start
 footer-area start
 =====================*/
 .footer-area {
-    
+    background: #001722;
+    padding: 75px 0 25px;
 }
+
+.footer-item .footer-logo {
+    max-width: 160px;
+}
+
+.footer-item p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    margin-top: 20px;
+}
+
+.footer-item h4 {
+    font-size: 25px;
+    font-weight: 600;
+    color: #FFF;
+    text-transform: uppercase;
+    margin-bottom: 24px;
+}
+
+.footer-item ul li {
+    padding: 5px 0;
+}
+
+.footer-item ul li a {
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+}
+
+.footer-item .social-icon li {
+    display: inline-block;
+    padding: 0 5px;
+}
+
+.footer-item .social-icon li a {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    background: #FFF;
+    color: #001722;
+    border-radius: 50%;
+    transition: 0.2s all ease;
+}
+
+.footer-item .social-icon li a:hover {
+    opacity: 0.8;
+}
+
+.footer-item img {
+    width: 100%;
+}
+
+.copyright-part {
+    padding-top: 50px;
+    text-align: center;
+}
+
+.copyright-part p {
+    font-size: 15px;
+    font-weight: 400;
+    color: #FFF;
+}
+
+.footer-area {
+    position: relative;
+}
+
+/*===================
+modal-area start
+=====================*/
+.modal-area {
+    z-index: 99999;
+    position: relative;
+}
+
+.modal-dialog {
+    max-width: 1050px;
+}
+
+.modal-dialog {
+    background: #FFF;
+}
+
+.modal-bg.show {
+    opacity: 0.5;
+}
+
+.modal-bg {
+    background-color: #000;
+}
+
+
+
+
+
 
 
 
@@ -556,40 +737,6 @@ registration page start
     margin: 12px auto;
 }
 
-.upload-btn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-}
-
-.filebtn {
-    padding: 8px 20px;
-    border-radius: 8px;
-    font-size: 20px;
-    border: none;
-    background: none;
-    outline: none;
-}
-
-.upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.filebtn img {
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-}
-
-.upload-btn {
-    margin-bottom: 20px;
-}
-
 .register-form form {
     max-width: 800px;
     margin: 50px auto 0;
@@ -626,45 +773,11 @@ registration page start
     background-image: url(images/down.png);
     background-repeat: no-repeat;
     background-position: 98% 50%;
-    background-size: 22px;
+    background-size: 30px;
     font-weight: 500;
     cursor: pointer;
 }
 
-.form-info p {
-    font-size: 18px;
-    font-weight: 500;
-    color: #191919;
-    margin-bottom: 0;
-    margin-right: 40px;
-}
-
-.radio-button-opt {
-    display: flex;
-    align-items: center;
-    background: #FFF;
-    padding: 12px 20px;
-    border-radius: 6px;
-    margin-bottom: 16px;
-}
-
-.radio-button {
-    display: flex;
-}
-
-.radio-button input,
-.radio-button label {
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 5px;
-    font-size: 18px;
-    font-weight: 500;
-    color: #191919;
-}
-
-.radio2 {
-    margin-left: 50px;
-}
 .form-info button {
     width: 200px;
     font-size: 18px;
